@@ -14,7 +14,7 @@ dialogSuffix, doItAndPrint, errorCondition, exists.method,
 Factors, factorsP, formulaFields, getFrame, getRcmdr, getSelection, gettextRcmdr,
 glmP, GrabFocus, groupsBox, groupsLabel, hclustSolutionsP, Hist, 
 identify3d, initializeDialog, 
-is.valid.name, is.SciViews, justDoIt, KMeans, labelRcmdr,
+is.valid.name, is.SciViews, justDoIt, KMeans, labelRcmdr, Library,
 listAllModels, listAOVModels, listDataSets, listFactors, listGeneralizedLinearModels, 
 listLinearModels, listMultinomialLogitModels, listNumeric, listPlugins, 
 listProportionalOddsModels, listTwoLevelFactors, listVariables, 
