@@ -44,6 +44,7 @@
 \alias{initializeDialog}
 \alias{is.valid.name}
 \alias{justDoIt}
+\alias{Library}
 \alias{listAllModels}
 \alias{listAOVModels}
 \alias{listDataSets}
@@ -151,6 +152,7 @@ hclustSolutionsP()
 initializeDialog(window=top, title="", offset=10, preventCrisp=FALSE)  # macro
 is.valid.name(x)
 justDoIt(command)
+Library(package, pos=4)
 listAllModels(envir=.GlobalEnv, ...)
 listAOVModels(envir=.GlobalEnv, ...)
 listDataSets(envir=.GlobalEnv, ...)
@@ -255,8 +257,10 @@ commanderPosition()
   \item{object}{an object (depends on context).}
   \item{offset}{in pixels, from top-left of Commander window.}
   \item{onOK}{function to execute when the \emph{OK} button is pressed.}
+  \item{package}{quoted name of package to load.}
   \item{plotLinesByGroup}{include a check box for plotting lines by group?}
   \item{plotLinesByGroupsText}{the label for the plot-lines-by-group check box.}
+  \item{pos}{position on search path at which to load package; default is \code{4}.}
   \item{positionLegend}{include a check box for a legend?}
   \item{preventGrabFocus}{prevent the dialog box from grabbing the focus.}
   \item{preventDoubleClick}{prevent double-clicking from pressing the OK button, even when the
@@ -362,7 +366,9 @@ commanderPosition()
   observations on which a statistical model is based. The function \code{formulaFields} returns information
   about the left-hand side, right-hand side, data, subject, and (for GLMs) family and link, of a model object.
   The function \code{sortVarNames} sorts variable names, including those containing numerals, into a more
-  "natural" order than does the standard \code{sort} function.
+  "natural" order than does the standard \code{sort} function. The function \code{Library} may be used to
+  load packages; it checks whether a package is already loaded, and if not by default puts it in position
+  4 on the search path.
   
   Some of these functions, marked \code{# macro} under \emph{Usage}, are "macro-like" in their behaviour, in that they 
   execute in the environment from which they are called. These were defined with an adaptation (used with permission) of
